# logfault

./: CMakeLists.txt
include/logfault/: logfault.h
tests/: CMakeLists.txt  general_tests.cpp
